--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,19 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.7.4</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.apache.solr/solr-solrj -->
+		<!-- <dependency>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-solrj</artifactId>
+			<version>7.3.1</version>
+		</dependency> -->
+		<!-- https://mvnrepository.com/artifact/org.apache.solr/solr-solrj -->
+		<!-- <dependency>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-solrj</artifactId>
+			<version>4.1.0</version>
+		</dependency>
+ -->
 
 	</dependencies>
 
